# cookiecutter-templates

./: README..md  README.md
typer/: cookiecutter.json
typer-fastapi/: cookiecutter.json
typer-fastapi/{{ cookiecutter.project_slug }}/: pyproject.toml
typer-fastapi/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  main.py  server.py
typer/{{ cookiecutter.project_slug }}/: pyproject.toml
typer/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: main.py
