[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.open_source_license }}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
rich = "^12.5.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.6.0"

[tool.poetry.scripts]
"{{ cookiecutter.project_slug }}" = "{{ cookiecutter.project_slug }}.main:app"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.1.0a6"]
build-backend = "poetry.core.masonry.api"
